<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">College Treasure Hunt</string>
    <string name="whoowesme">Find Treasure</string>
    <string name="whoiowe">Create Treasure</string>
    <string name="history">Treasure Collected</string>
    <string name="settings">Credits</string>
    <string name="splash_logo">Memora - Logo</string>
    <string name="splash_title">College Treasure Hunt</string>
    <string name="splash_author">v1.1</string>
    <string name="menu_1">Find Treasure</string>
    <string name="menu_1a"> </string>
    <string name="menu_1b"> </string>
    <string name="menu_3">Create Treasure</string>
    <string name="menu_4">Treasure Collected</string>
    <string name="menu_5">Preferences</string>
    <string name="label_title">Title:</string>
    <string name="label_note">Note:</string>
    <string name="label_tags">Tags:</string>
    <string name="menu_5a">Tell a Friend</string>
    <string name="menu_6">Share</string>
    <string name="menu_7">Rate Us</string>
    <string name="menu_8">Rearrange/Sort</string>
    <string name="menu_9">Default</string>
    <string name="menu_10">Ascending</string>
    <string name="menu_11">Descending</string>
    <string name="drawer_name">Tonye Brown</string>
    <string name="drawer_email">bzllbrown@gmail.com</string>
    <string name="summary_owed">You are owed: </string>
    <string name="summary_number_amt">0</string>
    <string name="summary_owing">You are owing: </string>
    <string name="debt_title">Add a debt</string>
    <string name="debt_image">Photo</string>
    <string name="debt_name">Full Name</string>
    <string name="debt_category">Debt Category</string>
    <string name="debt_memo2">Memo (e.g. $100, red sweater, etc.)</string>
    <string name="debt_date">Due date</string>
    <string name="debt_reminder">Set reminder?</string>
    <string name="debt_owing_who">Who owes who?</string>
    <string name="debt_owing1">They owe me</string>
    <string name="debt_owing2">I owe them</string>
    <string name="debt_save">Add Debt</string>
    <string name="debt_category_prompt">Choose a category</string>
    <string-array name="debt_category_arrays">
        <item android:icon="@drawable/sort49" android:title="Money" />
        <item>Books</item>
        <item>Clothing</item>
        <item>Food</item>
        <item>Tools</item>
        <item>Something unusual</item>
    </string-array>
    <string name="title_activity_who_owes_me2">Who Owes Me</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_load">Load</string>
    <string name="menu_dark_theme">Dark theme</string>
    <string name="menu_light_theme">Light theme</string>
    <string name="menu_single_toolbar">Single toolbar</string>
    <string name="menu_split_toolbar">Split toolbar</string>
    <string name="menu_fragment">Use Fragment</string>
    <string name="menu_activity">Use Activity</string>
    <string name="save_as">Save as…</string>
    <string name="save_as_success">Text saved as %s</string>
    <string name="save_as_failure">Text could not be saved: %s</string>
    <string name="load_failure_1">This isn\'t a valid rich text editor file</string>
    <string name="load_failure_2">This isn\'t a valid rich text editor file: %s</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_storage">Without this permission you can\'t insert camera pictures. Are you sure you want to deny this permission?</string>
    <string name="permission_deny">Deny</string>
    <string name="permission_retry">Re-try</string>
    <string name="title_activity">Write A New Note</string>
    <string name="title_activity2">Dictate A New Note</string>
    <string name="title_fragment">RT Editor Fragment</string>
    <string name="label_subject">Subject</string>
    <string name="label_message">Message</string>
    <string name="label_signature">Signature</string>
    <string name="title_activity_example">Editor Example</string>
    <string name="starting_legacy_editor">Starting legacy editor</string>
    <string name="starting_new_editor">Starting new editor</string>
    <string name="example_post_visual_title">I\'m editing a post!</string>
    <string name="example_post_title_placeholder">Post title</string>
    <string name="example_post_content_placeholder">Share your story here…</string>
    <string name="example_post_1_title">Post 1</string>
    <string name="example_post_1_content">Post 1 Content:\nBest post ever!</string>
    <string name="example_post_2_title">Post 2</string>
    <string name="example_post_2_content">
        <![CDATA[<p>Post 2 Content</p><blockquote>Quoted text</blockquote><br/>]]>
    </string>
    <string name="select_photo">Select a photo</string>
    <string name="select_photo_fail">Take photo from Camera</string>
    <string name="editor_title_hint">Note Title</string>
    <string name="editor_save">Save Note</string>
    <string name="editor_cancel">Discard Note</string>
    <string name="editor_discard">Discard</string>
    <string name="editor_date">Last modified:</string>
    <string name="editor_date_content"> </string>
    <string name="editor_location">Location:</string>
    <string name="editor_location_content"> </string>
    <string-array name="editor_title_array">
        <item>Compose Your Masterpiece</item>
        <item>Write something interesting</item>
        <item>What\'s on your mind?</item>
        <item>I\'m writing a song about...</item>
        <item>Write Note</item>
        <item>My memo for today is...</item>
        <item>Compose your note</item>
        <item>What happened on this day in history?</item>
        <item>Grocery List</item>
        <item>Today\'s Agenda</item>
        <item>Channel you inner Shakespeare!</item>
    </string-array>
    <string-array name="notebooks_array">
        <item>Default</item>
        <item>Memo</item>
        <item>School</item>
        <item>Lyrics</item>
        <item>Diary</item>
    </string-array>
    <string name="read">READ TEXT</string>
    <string name="test">TEST TTS</string>
    <string name="speak">Speech Recognition</string>
    <string name="cancelBtnImg">cancel_image</string>
    <string name="saveBtnImg">save_img_btn</string>
    <string name="editorTitle">Write Note</string>
    <string name="editorNotebooks">list of notebooks</string>
    <string name="editorSelectNotebook">Select a Notebook</string>
    <string name="notebookList">Your Notebook</string>
    <string name="title_activity_maps">Map</string>
</resources>