<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#dfece5">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="tonyebrown.whoowesme.activity.AddToDatabaseActivity"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debt_image"
            android:textSize="15sp"
            android:enabled="false"
            android:id="@+id/TextViewPhoto"
            android:textColor="#1b7e75" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/drawerHeaderImage"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/users81"
            app:civ_border_width="5dp"
            app:civ_border_color="@color/teal_700"
            android:layout_margin="14dp"
            android:layout_gravity="center_horizontal" />


        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:mtf_image="@drawable/users81"
            app:mtf_cardColor="@color/teal_400"
            app:mtf_labelColor="@color/teal_700">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/debt_name"
                android:textSize="15sp"
                android:id="@+id/EditTextName"
                android:inputType="textAutoCorrect" />
        </com.github.florent37.materialtextfield.MaterialTextField>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debt_category"
            android:textSize="15sp"
            android:enabled="false"
            android:id="@+id/TextViewDC"
            android:layout_marginTop="30dp"
            android:textColor="#1b7e75" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:entries="@array/debt_category_arrays"
            android:prompt="@string/debt_category_prompt"
            android:layout_gravity="center_horizontal"
            android:spinnerMode="dropdown"
            android:background="#26a599" />

        <com.github.florent37.materialtextfield.MaterialTextField
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:mtf_image="@drawable/draw21"
            app:mtf_cardColor="@color/teal_400"
            app:mtf_labelColor="@color/teal_700">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/EditTextMemo"
                android:inputType="textImeMultiLine"
                android:hint="@string/debt_memo2" />
        </com.github.florent37.materialtextfield.MaterialTextField>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debt_date"
            android:textSize="15sp"
            android:enabled="false"
            android:id="@+id/TextViewDD"
            android:layout_marginTop="30dp"
            android:textColor="#1b7e75" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debt_reminder"
            android:textSize="15sp"
            android:enabled="false"
            android:id="@+id/TextViewDR"
            android:layout_marginTop="30dp"
            android:textColor="#1b7e75" />


        <com.rey.material.widget.Switch
            style="@style/Material.Widget.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debt_owing_who"
            android:textSize="15sp"
            android:enabled="false"
            android:id="@+id/TextViewDW"
            android:layout_marginTop="30dp"
            android:textColor="#1b7e75" />


        <com.rey.material.widget.Switch
            style="@style/Material.Widget.Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/debt_save"
            android:id="@+id/buttonSaveDebt"
            android:layout_marginTop="35dp"
            android:textSize="28sp"
            style="@style/Widget.AppCompat.Button.Colored" />


    </LinearLayout>
</FrameLayout>