<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:onegravity="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="top"
        android:hint="@string/label_title"
        android:imeOptions="actionDone|flagNoEnterAction"
        android:inputType="textAutoCorrect|textCapSentences"
        android:maxLines="1"
        android:padding="5dp" />

    <com.onegravity.rteditor.RTEditText
        android:id="@+id/rtEditText_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/label_note"
        android:imeOptions="actionDone|flagNoEnterAction"
        android:inputType="textMultiLine|textAutoCorrect|textCapSentences" />

    <EditText
        android:id="@+id/rtEditText_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="top"
        android:hint="@string/label_tags"
        android:imeOptions="actionDone|flagNoEnterAction"
        android:inputType="textMultiLine|textAutoCorrect|textCapSentences" />

</LinearLayout>